--- a/environment.yml
+++ b/environment.yml
@@ -1,13 +1,14 @@
-name: geo
+name: newgeo
 channels:
-  - conda-forge
   - defaults
+  - conda-forge
 dependencies:
   - async_generator=1.10
   - attrs=19.3.0
   - backcall=0.1.0
   - bleach=3.1.4
   - boost-cpp=1.72.0
+  - bqplot=0.12.6
   - branca=0.3.1
   - bzip2=1.0.8
   - ca-certificates=2020.4.5.1
@@ -70,11 +71,12 @@ dependencies:
   - libblas=3.8.0
   - libcblas=3.8.0
   - libcurl=7.69.1
-  - libcxx=10.0.0
+  - libcxx=9.0.1
   - libdap4=3.20.4
   - libedit=3.1.20170329
   - libffi=3.2.1
   - libgdal=3.0.4
+  - libgfortran=4.0.0
   - libiconv=1.15
   - libkml=1.3.0
   - liblapack=3.8.0
@@ -171,4 +173,4 @@ dependencies:
   - zstd=1.4.4
   - pip:
     - mplleaflet==0.0.5
-prefix: /opt/anaconda3/envs/geo
+prefix: /opt/anaconda3/envs/newgeo
